Fix gap for BS style

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -34,7 +34,7 @@ body {
 .quiz-question-content {
   display: flex;
   flex-flow: column;
-  gap: 10px;
+  gap: 5px;
 }
 
 .quiz-question-content.open-ended {
